# x402-recharge-server

./: .dockerignore  .env.example  .env.registration.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  RELEASE_NOTE.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  server.py
.github/workflows/: docker.yml
config/: networks.json
docs/: OVERVIEW.md  REGISTRATION.md  bofai-agent-bsc-mainnet-registration-v1.json  bofai-agent-tron-mainnet-registration-v1.json
scripts/: _8004_common.py  __init__.py  deploy.sh  register_8004.py  render_registration.py  start_agent.sh  update_8004.py  upload_to_pinata.py
src/: __init__.py  config.py
ts/: package.json  run_ts.sh  server.ts  tsconfig.json
ts/scripts/: bootstrap-local-sdk.sh  check_balance.ts
